fix: sweetalert2 dark mode inputs and colors

--- a/src/assets/scss/themes/dark/_mazer-dark.scss
+++ b/src/assets/scss/themes/dark/_mazer-dark.scss
@@ -16,6 +16,9 @@
 .swal2-styled.swal2-confirm:hover {
     background-color: $swal-confirm-button-bg-hover !important;
 }
+.swal2-popup .form-control {
+        width: initial
+}
 
 // Apexcharts
 .apexcharts-text tspan {
